force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <description>This is custom object which is connected with Hotel__c with Lookup Relationship. Where one Hotel has multiple Reviews and This Object contains appropriate Fields of the Review. This object is used to store the record of the review.</description>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>