force-app/main/default/objects/Review__c/fields/Avg_Rating__c.field-meta.xml
<CustomField>
    <fullName>Avg_Rating__c</fullName>
    <description>This field stores the Average rating of perticular review</description>
    <formula>( Cleanliness_And_Hygiene__c +  Food_Quality__c  +  Hospitality__c +  Value_For_Money__c ) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>