force-app/main/default/objects/Review__c/fields/Cleanliness_And_Hygiene__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_And_Hygiene__c</fullName>
    <description>This field stores the rating of Cleanliness and hygiene.</description>
    <label>Cleanliness And Hygiene</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>