force-app/main/default/objects/Review__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This Field store the message of the user</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>