force-app/main/default/objects/Review__c/fields/Food_Quality__c.field-meta.xml
<CustomField>
    <fullName>Food_Quality__c</fullName>
    <description>This Field stores the rating of food quality.</description>
    <label>Food Quality</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>