force-app/main/default/objects/Review__c/fields/Hospitality__c.field-meta.xml
<CustomField>
    <fullName>Hospitality__c</fullName>
    <description>This field contains the rating of Hospitality of Hotel.</description>
    <label>Hospitality</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>