force-app/main/default/objects/Review__c/fields/Review_Title__c.field-meta.xml
<CustomField>
    <fullName>Review_Title__c</fullName>
    <description>This field stores the particular review title</description>
    <label>Review Title</label>
    <type>TextArea</type>
</CustomField>