force-app/main/default/objects/Review__c/fields/Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Name__c</fullName>
    <description>This field stores the name of the reviewer</description>
    <formula>Account__r.LastName</formula>
    <label>Reviewer Name</label>
    <type>Text</type>
</CustomField>