force-app/main/default/objects/Review__c/fields/Value_For_Money__c.field-meta.xml
<CustomField>
    <fullName>Value_For_Money__c</fullName>
    <description>This field will store the rating of value for money.</description>
    <label>Value For Money</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>